--- a/HW[6]/HW[6].ipynb
+++ b/HW[6]/HW[6].ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "YMGnwu-ZvJ_p"
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "Nf8-CGs8wccF"
    },
@@ -47,7 +47,7 @@
        "-1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "ummMvkTWyI_D"
    },
@@ -113,7 +113,7 @@
        "-1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 6,
    "metadata": {
     "id": "6vgIO4wXzkKk"
    },
@@ -184,7 +184,7 @@
        "True"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "ibDjdNn31xd1"
    },
@@ -219,18 +219,42 @@
    "source": [
     "def rgb_to_cmyk(r, g, b, RGB_SCALE = 255, CMYK_SCALE = 100):\n",
     "\n",
-    "  #TODO\n",
+    "    r /= RGB_SCALE\n",
+    "    g /= RGB_SCALE\n",
+    "    b /= RGB_SCALE\n",
+    "    \n",
+    "    k = 1 - max(r, g, b)\n",
+    "    \n",
+    "    c = (1 - k - r) / (1 - k)\n",
+    "    m = (1 - k - g) / (1 - k)\n",
+    "    y = (1 - k - b) / (1 - k)\n",
+    "  \n",
+    "    k *= CMYK_SCALE\n",
+    "    c *= CMYK_SCALE\n",
+    "    m *= CMYK_SCALE\n",
+    "    y *= CMYK_SCALE\n",
     "\n",
-    "  return c, m, y, k"
+    "    return int(c), int(m), int(y), int(k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "id": "rknfestQ2H5M"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55, 0, 55, 78)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rgb_to_cmyk(25, 56, 25)"
    ]
@@ -246,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "qrgQKtSr2VPU"
    },
@@ -254,18 +278,40 @@
    "source": [
     "def cmyk_to_rgb(c, m, y, k, CMYK_SCALE = 100, RGB_SCALE = 255):\n",
     "\n",
-    "  #TODO\n",
+    "    c /= CMYK_SCALE\n",
+    "    m /= CMYK_SCALE\n",
+    "    y /= CMYK_SCALE\n",
+    "    k /= CMYK_SCALE\n",
+    "    \n",
+    "    r = (1 - c) * (1 - k)\n",
+    "    g = (1 - m) * (1 - k)\n",
+    "    b = (1 - y) * (1 - k)\n",
+    "    \n",
+    "    r *= RGB_SCALE\n",
+    "    g *= RGB_SCALE\n",
+    "    b *= RGB_SCALE\n",
     "\n",
-    "  return r, g, b"
+    "    return int(r), int(g), int(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "id": "Y0defD-A2ijY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25, 56, 25)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cmyk_to_rgb(55, 0, 55, 78)"
    ]
@@ -289,12 +335,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H:271.27 S:0.53 I:0.54 V:0.78 L:0.52\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO \n",
-    "# H = ..."
+    "RGB_SCALE = 255\n",
+    "R = 150 / RGB_SCALE\n",
+    "G = 65 / RGB_SCALE\n",
+    "B = 200 / RGB_SCALE\n",
+    "\n",
+    "theta = math.degrees(math.acos( ((R - G) + (R - B)) / 2*math.sqrt( (R - B)*(G - B) ) ))\n",
+    "H = theta if B <= G else 360 - theta\n",
+    "S = 1 - 3 * min(R, G, B) / (R + G + B)\n",
+    "I = (R + G + B) / 3\n",
+    "V = max(R, G, B)\n",
+    "L = (max(R, G, B) + min(R, G, B)) / 2\n",
+    "\n",
+    "print(f\"H:{H:.2f} S:{S:.2f} I:{I:.2f} V:{V:.2f} L:{L:.2f}\")"
    ]
   },
   {
