read the picture and transform it to grayscale

--- a/HW[8]/HW[8].ipynb
+++ b/HW[8]/HW[8].ipynb
@@ -1,199 +1,302 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "eVE9CXTgGLxO"
-   },
-   "outputs": [
+  "cells": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'sudo' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "eVE9CXTgGLxO",
+        "outputId": "4fd69180-3e2d-46c9-b8e8-a4634fd27deb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following package was automatically installed and is no longer required:\n",
+            "  libnvidia-common-460\n",
+            "Use 'sudo apt autoremove' to remove it.\n",
+            "The following additional packages will be installed:\n",
+            "  tesseract-ocr-eng tesseract-ocr-osd\n",
+            "The following NEW packages will be installed:\n",
+            "  tesseract-ocr tesseract-ocr-eng tesseract-ocr-osd\n",
+            "0 upgraded, 3 newly installed, 0 to remove and 7 not upgraded.\n",
+            "Need to get 4,795 kB of archives.\n",
+            "After this operation, 15.8 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr-eng all 4.00~git24-0e00fe6-1.2 [1,588 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr-osd all 4.00~git24-0e00fe6-1.2 [2,989 kB]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr amd64 4.00~git2288-10f4998a-2 [218 kB]\n",
+            "Fetched 4,795 kB in 1s (4,071 kB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 3.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package tesseract-ocr-eng.\n",
+            "(Reading database ... 124015 files and directories currently installed.)\n",
+            "Preparing to unpack .../tesseract-ocr-eng_4.00~git24-0e00fe6-1.2_all.deb ...\n",
+            "Unpacking tesseract-ocr-eng (4.00~git24-0e00fe6-1.2) ...\n",
+            "Selecting previously unselected package tesseract-ocr-osd.\n",
+            "Preparing to unpack .../tesseract-ocr-osd_4.00~git24-0e00fe6-1.2_all.deb ...\n",
+            "Unpacking tesseract-ocr-osd (4.00~git24-0e00fe6-1.2) ...\n",
+            "Selecting previously unselected package tesseract-ocr.\n",
+            "Preparing to unpack .../tesseract-ocr_4.00~git2288-10f4998a-2_amd64.deb ...\n",
+            "Unpacking tesseract-ocr (4.00~git2288-10f4998a-2) ...\n",
+            "Setting up tesseract-ocr-osd (4.00~git24-0e00fe6-1.2) ...\n",
+            "Setting up tesseract-ocr-eng (4.00~git24-0e00fe6-1.2) ...\n",
+            "Setting up tesseract-ocr (4.00~git2288-10f4998a-2) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting pytesseract\n",
+            "  Downloading pytesseract-0.3.10-py3-none-any.whl (14 kB)\n",
+            "Collecting Pillow>=8.0.0\n",
+            "  Downloading Pillow-9.3.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.2 MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.2 MB 5.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.8/dist-packages (from pytesseract) (21.3)\n",
+            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.8/dist-packages (from packaging>=21.3->pytesseract) (3.0.9)\n",
+            "Installing collected packages: Pillow, pytesseract\n",
+            "  Attempting uninstall: Pillow\n",
+            "    Found existing installation: Pillow 7.1.2\n",
+            "    Uninstalling Pillow-7.1.2:\n",
+            "      Successfully uninstalled Pillow-7.1.2\n",
+            "Successfully installed Pillow-9.3.0 pytesseract-0.3.10\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "PIL"
+                ]
+              }
+            }
+          },
+          "metadata": {}
+        }
+      ],
+      "source": [
+        "!sudo apt install tesseract-ocr\n",
+        "!pip install pytesseract"
+      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pytesseract\n",
-      "  Downloading pytesseract-0.3.10-py3-none-any.whl (14 kB)\n",
-      "Requirement already satisfied: Pillow>=8.0.0 in c:\\users\\amiri\\anaconda3\\envs\\fcv_mohammadi\\lib\\site-packages (from pytesseract) (9.2.0)\n",
-      "Requirement already satisfied: packaging>=21.3 in c:\\users\\amiri\\anaconda3\\envs\\fcv_mohammadi\\lib\\site-packages (from pytesseract) (21.3)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\amiri\\anaconda3\\envs\\fcv_mohammadi\\lib\\site-packages (from packaging>=21.3->pytesseract) (3.0.9)\n",
-      "Installing collected packages: pytesseract\n",
-      "Successfully installed pytesseract-0.3.10\n"
-     ]
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "iqHoYiSH62pz",
+        "outputId": "696a5317-9446-439b-f324-987272206410",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following package was automatically installed and is no longer required:\n",
+            "  libnvidia-common-460\n",
+            "Use 'sudo apt autoremove' to remove it.\n",
+            "The following NEW packages will be installed:\n",
+            "  tesseract-ocr-fas\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 7 not upgraded.\n",
+            "Need to get 301 kB of archives.\n",
+            "After this operation, 446 kB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic/universe amd64 tesseract-ocr-fas all 4.00~git24-0e00fe6-1.2 [301 kB]\n",
+            "Fetched 301 kB in 1s (467 kB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 1.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package tesseract-ocr-fas.\n",
+            "(Reading database ... 124062 files and directories currently installed.)\n",
+            "Preparing to unpack .../tesseract-ocr-fas_4.00~git24-0e00fe6-1.2_all.deb ...\n",
+            "Unpacking tesseract-ocr-fas (4.00~git24-0e00fe6-1.2) ...\n",
+            "Setting up tesseract-ocr-fas (4.00~git24-0e00fe6-1.2) ...\n"
+          ]
+        }
+      ],
+      "source": [
+        "!sudo apt-get install tesseract-ocr-fas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vk-Bsayi63d_"
+      },
+      "source": [
+        "# **الف:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "id": "Kg_QnpkS0AE9",
+        "outputId": "16682d70-85c0-4f7c-88ad-ec835d8ddd23"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(5267, 3540, 3)\n",
+            "(5267, 3540)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-734cfafd6552>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Finding contours\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m## result = result otso|adaptive algorithm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpytesseract\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_to_string\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mlang\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'fas'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'result' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "# Import required packages\n",
+        "import cv2\n",
+        "import pytesseract\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "from PIL import Image\n",
+        "\n",
+        "##################### your code ################################\n",
+        "img = cv2.imread(\"royan.jpg\")\n",
+        "print(img.shape)\n",
+        "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "print(gray.shape)\n",
+        "\n",
+        "\n",
+        "################################################################\n",
+        "# Finding contours\n",
+        "## result = result otso|adaptive algorithm\n",
+        "print(pytesseract.image_to_string( result , lang='fas'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "W3x3Ro2yHOMC"
+      },
+      "outputs": [],
+      "source": [
+        "image_path_in_colab='.....'\n",
+        "extractedInformation = pytesseract.image_to_string(image_path_in_colab, lang='fas')\n",
+        "print(extractedInformation)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PyRrfRCj697Z"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YyPqXjW06-dh"
+      },
+      "source": [
+        "# **ب:**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JBGeZj_DTzfs"
+      },
+      "outputs": [],
+      "source": [
+        "# Import required packages\n",
+        "import cv2\n",
+        "import pytesseract\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "from PIL import Image\n",
+        "##################### your code ################################\n",
+        "img = cv2.imread(\".....\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "################################################################\n",
+        "# Finding contours\n",
+        "im2 = img.copy()\n",
+        "contours, hierarchy = cv2.findContours(dilation, cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_NONE)\n",
+        "\n",
+        "for cnt in contours:\n",
+        "  x, y, w, h = cv2.boundingRect(cnt)\n",
+        "\t# Drawing a rectangle on copied image\n",
+        "  rect = cv2.rectangle(im2, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
+        "\t# Cropping the text block for giving input to OCR\n",
+        "  cropped = im2[y:y + h, x:x + w]\n",
+        "  print(pytesseract.image_to_string(cropped, lang='fas'))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VOilxLYHVHwY"
+      },
+      "outputs": [],
+      "source": [
+        "image_path_in_colab='....'\n",
+        "extractedInformation = pytesseract.image_to_string(image_path_in_colab, lang='fas')\n",
+        "print(extractedInformation)"
+      ]
     }
-   ],
-   "source": [
-    "!sudo apt install tesseract-ocr\n",
-    "!pip install pytesseract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "iqHoYiSH62pz"
-   },
-   "outputs": [],
-   "source": [
-    "!sudo apt-get install tesseract-ocr-fas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Vk-Bsayi63d_"
-   },
-   "source": [
-    "# **الف:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
+  ],
+  "metadata": {
     "colab": {
-     "background_save": true
+      "provenance": []
     },
-    "id": "Kg_QnpkS0AE9"
-   },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'google'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15256\\558522260.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpytesseract\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolab\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpatches\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcv2_imshow\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'google'"
-     ]
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.13"
     }
-   ],
-   "source": [
-    "# Import required packages\n",
-    "import cv2\n",
-    "import pytesseract\n",
-    "from google.colab.patches import cv2_imshow\n",
-    "from PIL import Image\n",
-    "\n",
-    "##################### your code ################################\n",
-    "img = cv2.imread(\".....\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "################################################################\n",
-    "# Finding contours\n",
-    "## result = result otso|adaptive algorithm\n",
-    "print(pytesseract.image_to_string( result , lang='fas'))"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "W3x3Ro2yHOMC"
-   },
-   "outputs": [],
-   "source": [
-    "image_path_in_colab='.....'\n",
-    "extractedInformation = pytesseract.image_to_string(image_path_in_colab, lang='fas')\n",
-    "print(extractedInformation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "PyRrfRCj697Z"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "YyPqXjW06-dh"
-   },
-   "source": [
-    "# **ب:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "JBGeZj_DTzfs"
-   },
-   "outputs": [],
-   "source": [
-    "# Import required packages\n",
-    "import cv2\n",
-    "import pytesseract\n",
-    "from google.colab.patches import cv2_imshow\n",
-    "from PIL import Image\n",
-    "##################### your code ################################\n",
-    "img = cv2.imread(\".....\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "################################################################\n",
-    "# Finding contours\n",
-    "im2 = img.copy()\n",
-    "contours, hierarchy = cv2.findContours(dilation, cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_NONE)\n",
-    "\n",
-    "for cnt in contours:\n",
-    "  x, y, w, h = cv2.boundingRect(cnt)\n",
-    "\t# Drawing a rectangle on copied image\n",
-    "  rect = cv2.rectangle(im2, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
-    "\t# Cropping the text block for giving input to OCR\n",
-    "  cropped = im2[y:y + h, x:x + w]\n",
-    "  print(pytesseract.image_to_string(cropped, lang='fas'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "VOilxLYHVHwY"
-   },
-   "outputs": [],
-   "source": [
-    "image_path_in_colab='....'\n",
-    "extractedInformation = pytesseract.image_to_string(image_path_in_colab, lang='fas')\n",
-    "print(extractedInformation)"
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "gpuClass": "standard",
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.13"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
