--- a/HW[11]/HW11.ipynb
+++ b/HW[11]/HW11.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "U6idv-p1IkRv"
       },
@@ -385,7 +385,7 @@
       "metadata": {
         "id": "TWE2DiIeszyj"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -396,7 +396,7 @@
       "metadata": {
         "id": "b4LZXoD8nhIZ"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -406,12 +406,12 @@
       ],
       "metadata": {
         "id": "m7HREJlcVfvo",
-        "outputId": "ed5750b1-e6f0-4e3f-ecc8-ed59ef6aa450",
+        "outputId": "41a70c52-4894-4d70-8e89-76b934c50da7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1Y2CM201yphBcdovvheDkEn9Bzu6IXeUZ&confirm=t\n",
             "To: /content/fruits-360-original-size.zip\n",
-            "100% 579M/579M [00:02<00:00, 255MB/s]\n"
+            "100% 579M/579M [00:09<00:00, 63.8MB/s]\n"
           ]
         }
       ]
@@ -432,12 +432,12 @@
       ],
       "metadata": {
         "id": "aXPIYYfVnkcd",
-        "outputId": "0449fc75-5e29-4983-8dba-158aedc8ea2b",
+        "outputId": "84b8afb7-c47c-4147-e285-d4b6d5bb7f1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -5471,7 +5471,7 @@
       "metadata": {
         "id": "czACR9kYoVC8"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -5513,7 +5513,7 @@
       "metadata": {
         "id": "D07DQJ0Bptjb"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -5526,13 +5526,13 @@
       ],
       "metadata": {
         "id": "MVYOhNXFo3p5",
-        "outputId": "40b679aa-d9d8-4a73-fe31-ca3ddd401671",
+        "outputId": "4d6eef88-a473-4053-8cca-9b0a551f3d14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
         }
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5556,7 +5556,7 @@
       ],
       "metadata": {
         "id": "8rmykk8Rqhr7",
-        "outputId": "ef85e9f8-ca4c-4483-b891-6680a0767df9",
+        "outputId": "b3c371bd-a7fe-41e2-c34e-bfb45b5f111e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -5568,7 +5568,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f67acb4c160>"
+              "<matplotlib.image.AxesImage at 0x7f3000a78fa0>"
             ]
           },
           "metadata": {},
@@ -5616,7 +5616,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ecZcddSJnq2T",
-        "outputId": "62993b38-7d4a-410e-90c4-1db33be23ff1"
+        "outputId": "72e1b58b-5164-4669-a4ee-f387c897ea1d"
       },
       "execution_count": 12,
       "outputs": [
@@ -5643,26 +5643,51 @@
       "cell_type": "code",
       "source": [
         "# YOU CAN CHANGE IT\n",
-        "EPOCHS = 30"
+        "EPOCHS = 15"
       ],
       "metadata": {
         "id": "ayuILFJT8RZP"
       },
-      "execution_count": 13,
+      "execution_count": 64,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "resnet = tf.keras.models.Sequential()\n",
-        "# Write your code here\n",
+        "\n",
+        "from tensorflow.keras.applications.resnet50 import ResNet50\n",
+        "resnet.add(ResNet50(weights=None, classes=24))\n",
+        "\n",
         "resnet.summary()"
       ],
       "metadata": {
-        "id": "X5y_nU9V52Sm"
+        "id": "X5y_nU9V52Sm",
+        "outputId": "a5ebb63d-df72-4409-8479-7fa0a8b05a66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_19\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " resnet50 (Functional)       (None, 24)                23636888  \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 23,636,888\n",
+            "Trainable params: 23,583,768\n",
+            "Non-trainable params: 53,120\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -5674,7 +5699,7 @@
       "metadata": {
         "id": "qeF2HFQa8C4w"
       },
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -5683,10 +5708,61 @@
         "resnet.fit(train_generator, epochs=EPOCHS)"
       ],
       "metadata": {
-        "id": "1aTWQVfN8OPI"
+        "id": "1aTWQVfN8OPI",
+        "outputId": "e8083a2b-8daa-461d-e92a-cc96091a5c1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            "65/65 [==============================] - 70s 992ms/step - loss: 0.6972 - acc: 0.7930\n",
+            "Epoch 2/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.1316 - acc: 0.9592\n",
+            "Epoch 3/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0428 - acc: 0.9868\n",
+            "Epoch 4/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0787 - acc: 0.9746\n",
+            "Epoch 5/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0853 - acc: 0.9745\n",
+            "Epoch 6/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0481 - acc: 0.9883\n",
+            "Epoch 7/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.1501 - acc: 0.9552\n",
+            "Epoch 8/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0127 - acc: 0.9970\n",
+            "Epoch 9/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0175 - acc: 0.9958\n",
+            "Epoch 10/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0044 - acc: 0.9989\n",
+            "Epoch 11/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0033 - acc: 0.9994\n",
+            "Epoch 12/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0043 - acc: 0.9987\n",
+            "Epoch 13/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 0.0016 - acc: 0.9995\n",
+            "Epoch 14/15\n",
+            "65/65 [==============================] - 68s 1s/step - loss: 3.8073e-04 - acc: 1.0000\n",
+            "Epoch 15/15\n",
+            "65/65 [==============================] - 67s 1s/step - loss: 1.6938e-04 - acc: 1.0000\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f2fdad73820>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5701,15 +5777,54 @@
       "cell_type": "code",
       "source": [
         "fine_tune_resnet = tf.keras.models.Sequential()\n",
-        "# write your code here \n",
         "\n",
-        "fine_tune_resnet.summary()\n"
+        "original_resnet = ResNet50(weights=\"imagenet\", classes=1000, include_top=False)\n",
+        "\n",
+        "for layer in original_resnet.layers[:]:\n",
+        "    layer.trainable = False\n",
+        "\n",
+        "fine_tune_resnet.add(original_resnet)\n",
+        "fine_tune_resnet.add(keras.layers.GlobalAveragePooling2D())\n",
+        "fine_tune_resnet.add(keras.layers.Dense(150, activation=\"relu\"))\n",
+        "fine_tune_resnet.add(keras.layers.Dense(24, activation=\"softmax\"))\n",
+        "\n",
+        "\n",
+        "fine_tune_resnet.summary()"
       ],
       "metadata": {
-        "id": "zepWgjspppW1"
+        "id": "zepWgjspppW1",
+        "outputId": "06cdebc9-403b-4d13-f05b-6a01718961a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_21\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " resnet50 (Functional)       (None, None, None, 2048)  23587712  \n",
+            "                                                                 \n",
+            " global_average_pooling2d_3   (None, 2048)             0         \n",
+            " (GlobalAveragePooling2D)                                        \n",
+            "                                                                 \n",
+            " dense_26 (Dense)            (None, 150)               307350    \n",
+            "                                                                 \n",
+            " dense_27 (Dense)            (None, 24)                3624      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 23,898,686\n",
+            "Trainable params: 310,974\n",
+            "Non-trainable params: 23,587,712\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -5721,19 +5836,70 @@
       "metadata": {
         "id": "6w0GV-smxgpD"
       },
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "fine_tune_resnet.fit(train_generator, epochs=1)"
+        "fine_tune_resnet.fit(train_generator, epochs=EPOCHS)"
       ],
       "metadata": {
-        "id": "MU6Ur3xoyI6O"
+        "id": "MU6Ur3xoyI6O",
+        "outputId": "4fb2f3fa-f5e7-4b57-f713-a3a1d201dba6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            "65/65 [==============================] - 36s 515ms/step - loss: 2.9140 - acc: 0.1441\n",
+            "Epoch 2/15\n",
+            "65/65 [==============================] - 34s 521ms/step - loss: 2.4459 - acc: 0.3202\n",
+            "Epoch 3/15\n",
+            "65/65 [==============================] - 34s 523ms/step - loss: 2.0355 - acc: 0.4523\n",
+            "Epoch 4/15\n",
+            "65/65 [==============================] - 34s 521ms/step - loss: 1.6876 - acc: 0.5922\n",
+            "Epoch 5/15\n",
+            "65/65 [==============================] - 35s 541ms/step - loss: 1.4134 - acc: 0.6729\n",
+            "Epoch 6/15\n",
+            "65/65 [==============================] - 34s 523ms/step - loss: 1.2030 - acc: 0.7188\n",
+            "Epoch 7/15\n",
+            "65/65 [==============================] - 34s 520ms/step - loss: 1.0473 - acc: 0.7468\n",
+            "Epoch 8/15\n",
+            "65/65 [==============================] - 34s 524ms/step - loss: 0.9167 - acc: 0.7772\n",
+            "Epoch 9/15\n",
+            "65/65 [==============================] - 34s 523ms/step - loss: 0.8116 - acc: 0.8100\n",
+            "Epoch 10/15\n",
+            "65/65 [==============================] - 35s 541ms/step - loss: 0.7289 - acc: 0.8209\n",
+            "Epoch 11/15\n",
+            "65/65 [==============================] - 34s 516ms/step - loss: 0.6515 - acc: 0.8493\n",
+            "Epoch 12/15\n",
+            "65/65 [==============================] - 34s 516ms/step - loss: 0.5970 - acc: 0.8559\n",
+            "Epoch 13/15\n",
+            "65/65 [==============================] - 34s 518ms/step - loss: 0.5510 - acc: 0.8588\n",
+            "Epoch 14/15\n",
+            "65/65 [==============================] - 34s 515ms/step - loss: 0.5112 - acc: 0.8694\n",
+            "Epoch 15/15\n",
+            "65/65 [==============================] - 34s 517ms/step - loss: 0.4684 - acc: 0.8759\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f2c2cba4190>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5750,10 +5916,32 @@
         "resnet.evaluate(test_generator)"
       ],
       "metadata": {
-        "id": "epoBuiG48dki"
+        "id": "epoBuiG48dki",
+        "outputId": "bf67dea7-1d4b-43db-bca4-3860f8d8f6d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "33/33 [==============================] - 17s 487ms/step - loss: 3.6954e-05 - acc: 1.0000\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3.695361010613851e-05, 1.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -5761,10 +5949,32 @@
         "fine_tune_resnet.evaluate(test_generator)"
       ],
       "metadata": {
-        "id": "K09b3maVvmM-"
+        "id": "K09b3maVvmM-",
+        "outputId": "e6055b55-7622-4dc4-dd77-8838fd425e6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "33/33 [==============================] - 18s 508ms/step - loss: 0.4422 - acc: 0.8907\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.44219139218330383, 0.8906752467155457]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
     }
   ]
 }
